test/scc_test/exp/semantic-errors/078.a
078.t:4:5: error: expression must have scalar type